deploy/k8s/ssg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: album-app-ssg
  labels:
    app: album-app-ssg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: album-app-ssg
  template:
    metadata:
      labels:
        app: album-app-ssg
    spec:
      containers:
      - name: app
        image: album-app-ssg:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
