deploy/k8s/ssg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: album-app-ssg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: album-app-ssg-service
            port:
              number: 80
